fix email button & postcard on mobile (#80)
* flatten buttons with main

* even emailInput with main

* relative unit on phone-narrow for responsiveness

* enlarge postcard on phone-narrow

* fix margin on feedbackMessage

also flipped gradient upside-down since it looks a bit better bleeding dark towards the bottom of the page, near the buttons

--- a/src/components/EmailSubscription/EmailSubscription.scss
+++ b/src/components/EmailSubscription/EmailSubscription.scss
@@ -19,7 +19,7 @@
     height: calc(10px + 2vh);
 
     border-radius: 50px;
-    margin-right: var(--extra-large-spacer);
+    margin-right: var(--large-spacer);
     padding: var(--small-spacer) var(--large-spacer);
   }
 
@@ -27,14 +27,18 @@
     display: flex;
     background: var(--wedgewood);
     border-radius: 50%;
-    padding: 8px;
-    height: calc(20px + 2.5vh);
+    padding: 6.7px;
+    height: fit-content;
     cursor: pointer;
     border: none;
+
+    @include responsiveness.respond(phone) {
+      margin-right: 1em;
+    }
   }
 
   &__arrow {
-    width: 3vw;
+    width: 2em;
     min-width: 14px;
     max-width: 30px;
   }
@@ -49,15 +53,11 @@
     }
   }
 
-  &__icon {
-    margin-right: var(--small-spacer);
-  }
-
   &__feedbackMessage {
     @include typography.error;
     font-weight: bold;
     color: var(--waterleaf);
-
+    padding-left: 5px;
     opacity: 0.77;
   }
 }
