--- a/src/views/Hero/Hero.scss
+++ b/src/views/Hero/Hero.scss
@@ -14,7 +14,7 @@
     );
 
     // dark mode overlay
-    background-image: linear-gradient(var(--wedgewood__night) 0%, var(--waterleaf__night) 100%);
+    background-image: linear-gradient(0deg, var(--wedgewood__night) 0%, var(--waterleaf__night) 100%);
     background-color: initial;
 
     /* We are excluding this for the MVP
@@ -61,7 +61,7 @@
     }
 
     @include responsiveness.respond(phone-narrow) {
-      min-width: 380px;
+      min-width: calc(60vw + 15vh);
     }
 
     @include responsiveness.respond(smallest) {
